# gap3-jm

./: .gitignore  readme
doc/: Makefile  aboutgap.tex  action.tex  aggroup.tex  agwords.tex  algebra.tex  algext.tex  algfp.tex  algmat.tex  anupq.tex  arep.tex  autag.tex  blister.tex  boolean.tex  characte.tex  chartabl.tex  chvabsc.tex  chvaffn.tex  chvalgg.tex  chvbrai.tex  chvccos.tex  chvchek.tex  chvcoxe.tex  chvcyc.tex  chvdec.tex  chveig.tex  chvfmt.tex  chvfref.tex  chvhcos.tex  chvheck.tex  chvhmod.tex  chvhrep.tex  chvintr.tex  chvirr.tex  chvkalu.tex  chvmat.tex  chvposet.tex  chvrcos.tex  chvrefg.tex  chvrefl.tex  (+78 more)
etc/: forum92b.txt  forum92c.txt  forum92d.txt  forum93a.txt  forum93b.txt  forum93c.txt  forum93d.txt  forum94a.txt  forum94b.txt  forum94c.txt  forum94d.txt  forum95a.txt  forum95b.txt  forum95c.txt  forum95d.txt  forum96a.txt  forum96b.txt  forum96c.txt  forum96d.txt  forum97a.txt  readme
grp/: basic.grp  cryst.grp  groupid.grp  imf.grp  imf0.grp  imf10.grp  imf11.grp  imf12.grp  imf13.grp  imf14.grp  imf15.grp  imf16.grp  imf17.grp  imf18.grp  imf19.grp  imf1to9.grp  imf20.grp  imf21.grp  imf22.grp  imf23.grp  imf24.grp  irredsol.grp  matgrp.grp  perf.grp  perf0.grp  perf01.grp  perf02.grp  perf03.grp  perf04.grp  perf05.grp  perf06.grp  perf07.grp  perf08.grp  perf09.grp  perf10.grp  perf11.grp  perf12.grp  (+37 more)
pkg/xgap/src.x11/: Autofile.in  HELP  Makefile  TARGETS  configure  configure.in  gapgraph.c  gapgraph.h  gaptext.c  gaptext.h  popdial.c  popdial.h  pty.c  pty.h  selfile.c  selfile.h  utils.c  utils.h  xcmds.c  xcmds.h  xgap.c  xgap.h
(+2855 files in other folders)
