dnl ## check for a unique program in the source directory ###################
AC_INIT(xgap.c)

dnl ## check for the c-compiler #############################################
AC_PROG_CC
AC_PROG_CC_C_O
AC_PROG_GCC_TRADITIONAL

dnl ## check if the make predefine the variable MAKE ########################
AC_PROG_MAKE_SET

dnl ## checks where the X11 libraries live ##################################
AC_PATH_XTRA
AC_CHECK_LIB( Xt, XtVaAppInitialize, , , -lX11 -L$x_libraries )

dnl ## checks for header files ##############################################
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_HEADER_TIME
AC_CHECK_HEADERS( libc.h fcntl.h sgtty.h termio.h unistd.h signal.h \
		  sys/time.h sys/ioctl.h sys/time.h sys/signal.h )
                  
dnl ## checks for typedefs, structures, and compiler characteristics ########
AC_C_CONST
AC_TYPE_PID_T
AC_STRUCT_ST_RDEV
AC_TYPE_UID_T

dnl ## checks for library functions #########################################
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS( select getpseudotty _getpty )

dnl ## generate a makefile ##################################################
AC_OUTPUT(Autofile)
